# xmonadrc

./: .dir-locals.el  .envrc  .gitignore  .gitmodules  GNUmakefile  LICENSE  README.md  Setup.hs  build.sh  cabal.config  cabal.project  checkrc.hs  default.nix  hie.yaml  overrides.nix  shell.nix  taffybarrc.hs  xmonadrc.cabal  xmonadrc.hs  xmonadrc.nix
doc/: todo.org
etc/: taffybar.gtk
nix/: playlists-http.json  playlists-http.nix  playlists.json  playlists.nix  sources.json  xmonad-contrib.cabal.nix  xmonad-contrib.json  xmonad-contrib.nix  xmonad.cabal.nix  xmonad.json  xmonad.nix
script/: git-remotes.sh
scripts/: build.nix  build.sh  dependencies.sh  install.sh  nix-env.sh  run-in-xephyr.sh  taffybar.sh
src/Taffybar/Local/: Host.hs  MPRIS.hs  Pager.hs  Widgets.hs
src/Text/: Playlist.hs
src/Text/Playlist/: Internal.hs  Simple.hs
src/XMonad/Local/: Action.hs  Keys.hs  Layout.hs  Log.hs  Music.hs  Prompt.hs  Stack.hs  Tagging.hs  Theme.hs  Workspaces.hs
src/XMonad/Local/Layout/: Columns.hs  Common.hs
util/: GNUmakefile  LICENSE  README.md
util/nix/envs/: haskell-cabal.nix
