------------------------------------------------------------------------------
name:          xmonadrc
version:       0.2.0.0
synopsis:      Peter's XMonad Configuration
homepage:      http://www.pmade.com
license:       BSD3
license-file:  LICENSE
author:        Peter Jones <pjones@pmade.com>
maintainer:    Peter Jones <pjones@pmade.com>
copyright:     Copyright (c) 2013,2014 Peter Jones
category:      Graphics
build-type:    Simple
cabal-version: >=1.8

------------------------------------------------------------------------------
library
  exposed-modules:
    Taffybar.Local.Host
    Taffybar.Local.MPRIS
    Taffybar.Local.Pager
    Taffybar.Local.Widgets
    Text.Playlist
    XMonad.Local.Action
    XMonad.Local.Keys
    XMonad.Local.Layout
    XMonad.Local.Log
    XMonad.Local.Music
    XMonad.Local.Prompt
    XMonad.Local.Theme
    XMonad.Local.Workspaces

  other-modules:
    Text.Playlist.Internal
    Text.Playlist.Simple

  hs-source-dirs: src
  ghc-options: -Wall -Werror

  build-depends: X11            >= 1.6  && < 2.0
               , base           >= 4.0  && < 5.0
               , bytestring     >= 0.9  && < 0.11
               , containers     >= 0.4  && < 0.6
               , directory      >= 1.1  && < 1.3
               , filepath       >= 1.3  && < 1.5
               , gtk            >= 0.12 && < 0.15
               , hostname       >= 1.0  && < 1.1
               , libmpd         >= 0.8  && < 0.10
               , parsec         >= 3.1  && < 3.2
               , setlocale      >= 1.0  && < 1.1
               , text           >= 0.11 && < 1.3
               , taffybar       == 0.4.5
               , xmonad         == 0.12
               , xmonad-contrib == 0.12


------------------------------------------------------------------------------
executable xmonadrc
  main-is: xmonadrc.hs
  ghc-options: -Wall -Werror
  build-depends: base
               , xmonad
               , xmonad-contrib
               , xmonadrc
               , taffybar

------------------------------------------------------------------------------
executable checkrc
  main-is: checkrc.hs
  ghc-options: -Wall -Werror
  build-depends: base
               , containers
               , xmonad
               , xmonad-contrib
               , xmonadrc

------------------------------------------------------------------------------
executable taffybarrc
  main-is: taffybarrc.hs
  ghc-options: -Wall -Werror -threaded -rtsopts
  build-depends: base, taffybar, xmonadrc
