------------------------------------------------------------------------------
name:          xmonadrc
version:       17.2.27.0
synopsis:      Peter's XMonad Configuration
homepage:      https://github.com/pjones/xmonadrc
license:       BSD3
license-file:  LICENSE
author:        Peter Jones <pjones@pmade.com>
maintainer:    Peter Jones <pjones@pmade.com>
copyright:     Copyright (c) 2013-2017 Peter J. Jones
category:      Graphics
build-type:    Simple
cabal-version: >=1.8

------------------------------------------------------------------------------
library
  exposed-modules:
    Taffybar.Local.Host
    Taffybar.Local.MPRIS
    Taffybar.Local.Pager
    Taffybar.Local.Widgets
    XMonad.Local.Action
    XMonad.Local.Keys
    XMonad.Local.Layout
    XMonad.Local.Log
    XMonad.Local.Music
    XMonad.Local.Prompt
    XMonad.Local.Tagging
    XMonad.Local.Theme
    XMonad.Local.Workspaces

  other-modules:
    Paths_xmonadrc

  hs-source-dirs: src
  ghc-options: -Wall -Werror

  build-depends: X11            >= 1.8  && < 2.0
               , base           >= 4.0  && < 5.0
               , bytestring     >= 0.9  && < 0.11
               , containers     >= 0.4  && < 0.6
               , directory      >= 1.1  && < 1.4
               , either         >= 4.4  && < 4.5
               , filepath       >= 1.3  && < 1.5
               , gtk            >= 0.12 && < 0.15
               , http-client    >= 0.4  && < 0.6
               , hostname       >= 1.0  && < 1.1
               , libmpd         >= 0.8  && < 0.10
               , MonadRandom    >= 0.4  && < 0.6
               , parsec         >= 3.1  && < 3.2
               , playlists      >= 0.4  && < 1.0
               , playlists-http >= 0.1  && < 1.0
               , setlocale      >= 1.0  && < 1.1
               , text           >= 0.11 && < 1.3
               , transformers   >= 0.4  && < 1.0
               , taffybar       == 0.4.6
               , xmonad         == 0.13
               , xmonad-contrib == 0.13


------------------------------------------------------------------------------
executable xmonadrc
  main-is: xmonadrc.hs
  ghc-options: -Wall -Werror
  build-depends: base
               , xmonad
               , xmonad-contrib
               , xmonadrc
               , taffybar

------------------------------------------------------------------------------
executable checkrc
  main-is: checkrc.hs
  ghc-options: -Wall -Werror
  build-depends: base
               , containers
               , xmonad
               , xmonad-contrib
               , xmonadrc

------------------------------------------------------------------------------
executable taffybarrc
  main-is: taffybarrc.hs
  ghc-options: -Wall -Werror -threaded -rtsopts
  build-depends: base, taffybar, xmonadrc
